--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 CONTEXT.md
 .env
-data-collection/agent/logs/*
-data-collection/manual/logs/*
-data-collection/manual/processed_files/*
+venv/
+data/*
 
